--- a/src/index.css
+++ b/src/index.css
@@ -168,151 +168,7 @@ nav .link-styled {
     bottom: 0;
 }
 
-#webgi-canvas {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-}
-
-#webgi-canvas-container {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: center;
-    top: 0;
-    pointer-events: none;
-    min-height: 831px;
-    background: transparent;
-}
-
-#webgi-canvas-container .button {
-    background: #0071e3;
-    color: #fff;
-    cursor: pointer;
-    text-align: center;
-    white-space: nowrap;
-    font-size: 17px;
-    font-weight: 400;
-    min-width: 28px;
-    padding: 8px 16px;
-    border-radius: 980px;
-    position: absolute;
-    top: 30px;
-    border: none;
-    z-index: 1;
-    transition-duration: 0.3s;
-}
-
-.display-section.wrapper {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 980px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 50px 0 400px 0;
-    height: 100vh;
-    box-sizing: border-box;
-    opacity: 0;
-    position: relative;
-}
-
-.display-section .title {
-    color: #86868b;
-    font-size: 17px;
-    font-weight: 400;
-    letter-spacing: -0.022em;
-    margin-bottom: 0;
-}
-
-.display-section .text {
-    display: inline-block;
-    color: transparent;
-    background-image: linear-gradient(180deg, #ffb6ff, #b344ff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    padding-top: 0.5px;
-    margin-top: 16px;
-    font-size: 48px;
-    font-weight: 600;
-    margin-bottom: 18px;
-}
-
-.display-section .description {
-    font-size: 21px;
-    font-weight: 400;
-}
-
-.display-section .button {
-    background: #0071e3;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    text-align: center;
-    white-space: nowrap;
-    font-size: 17px;
-    font-weight: 400;
-    min-width: 28px;
-    padding: 8px 16px;
-    border-radius: 980px;
-    margin: 15px;
-}
-
-.display-section .back-button {
-    background: white;
-    color: black;
-    border: none;
-    border-radius: 50px;
-    padding: 10px 30px;
-    font-size: 0.6rem;
-    cursor: pointer;
-    transition: all 0.8s ease;
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-}
-
-.mobile-or-tablet .iphone-img {
-    display: none;
-}
-
-@keyframes fadeOut {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
-}
-
-.loader {
-    position: fixed;
-    z-index: 2;
-    background-color: white;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation-name: fadeOut;
-    animation-duration: 0.3s;
-    animation-delay: 3s;
-    animation-fill-mode: forwards;
-    pointer-events: none;
-}
-
-.loader .logo {
-    max-width: 400px;
-    max-height: 300px;
-    width: 100%;
-    height: 100%;
-}
+/* --------------- sound ------------------- */
 
 .sound-section.wrapper {
     width: 100%;
@@ -333,7 +189,7 @@ nav .link-styled {
     display: flex;
     align-items: center;
     flex-direction: column;
-    opacity: 0;
+    /* opacity: 0; */
 }
 
 .sound-section .title {
@@ -402,6 +258,156 @@ nav .link-styled {
     margin: 0 14px;
     cursor: pointer;
 }
+
+/* --------------- display ----------------- */
+
+.display-section.wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 980px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px 0 400px 0;
+    height: 100vh;
+    box-sizing: border-box;
+    /* opacity: 0; */
+    position: relative;
+}
+
+.display-section .title {
+    color: #86868b;
+    font-size: 17px;
+    font-weight: 400;
+    letter-spacing: -0.022em;
+    margin-bottom: 0;
+}
+
+.display-section .text {
+    display: inline-block;
+    color: transparent;
+    background-image: linear-gradient(180deg, #ffb6ff, #b344ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    padding-top: 0.5px;
+    margin-top: 16px;
+    font-size: 48px;
+    font-weight: 600;
+    margin-bottom: 18px;
+}
+
+.display-section .description {
+    font-size: 21px;
+    font-weight: 400;
+}
+
+.display-section .button {
+    background: #0071e3;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    font-size: 17px;
+    font-weight: 400;
+    min-width: 28px;
+    padding: 8px 16px;
+    border-radius: 980px;
+    margin: 15px;
+}
+
+.display-section .back-button {
+    background: white;
+    color: black;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 30px;
+    font-size: 0.6rem;
+    cursor: pointer;
+    transition: all 0.8s ease;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+#webgi-canvas {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+}
+
+#webgi-canvas-container {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+    top: 0;
+    pointer-events: none;
+    min-height: 831px;
+    background: transparent;
+}
+
+#webgi-canvas-container .button {
+    background: #0071e3;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    white-space: nowrap;
+    font-size: 17px;
+    font-weight: 400;
+    min-width: 28px;
+    padding: 8px 16px;
+    border-radius: 980px;
+    position: absolute;
+    top: 30px;
+    border: none;
+    z-index: 1;
+    transition-duration: 0.3s;
+}
+
+.mobile-or-tablet .iphone-img {
+    display: none;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+.loader {
+    position: fixed;
+    z-index: 2;
+    background-color: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-name: fadeOut;
+    animation-duration: 0.3s;
+    animation-delay: 3s;
+    animation-fill-mode: forwards;
+    pointer-events: none;
+}
+
+.loader .logo {
+    max-width: 400px;
+    max-height: 300px;
+    width: 100%;
+    height: 100%;
+}
+
+/* --------------- media queries ------------------ */
 
 @media screen and (max-width: 990px) {
     .jumbotron-section .iphone-img,
